--- a/styles/main.css
+++ b/styles/main.css
@@ -1,80 +1,141 @@
 .seccionPublicidad {
-  width: 100%;
-  height: 20vh;
-  overflow: hidden;
-  position: relative;
+  background-color: #FD4B02;
 }
 
 .seccionPublicidad > img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: top;
-  transform: scale(1.4);
-  transform-origin: top;
-  transition: transform 0.9s ease;
 }
 
-header > .seccionRecomendados {
-  background: linear-gradient(0deg, #E3E6E6, #E3E6E6 , #F74901);
+.seccionRecomendados {
+  background: linear-gradient(0deg, #E3E6E6, #E3E6E6 , #FD4B02);
   padding: 20px;
 }
 
-.seccionRecomendados > div {
-  width: 100%;
+.promocion > div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  align-items: end
+}
+
+.oferta > p > span {
+  background-color: #CC0C39;
+  color: white;
+  padding: 5px;
+  font-weight: 500;
+  font-size: 13px;
+}
+
+.oferta > p {
+  color: #CC0C39;
+  padding: 5px;
+  font-weight: 500;
+  font-size: 13px;
+}
+
+.seccionRecomendados > div, .seccionMasProductosRecomendados > div {
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
+  grid-auto-rows: 1fr;
 }
 
-.seccionRecomendados > div > div{
+.seccionRecomendados > div > div, .seccionMasProductosRecomendados > div > div {
   background-color: white;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.24);
+}
+
+.seccionRecomendados > div > div > h3, .tituloProductos > h2, .seccionMasProductosRecomendados > div > div > h3 {
+  font-weight: 600;
+}
+
+.seccionRecomendados > div > div > h3, .tituloProductos > h2, .seccionMasProductosRecomendados > div > div > h3 {
+  cursor: default;
+}
+
+.seccionRecomendados > div > div > a, .tituloProductos > a, .seccionMasProductosRecomendados a {
+  color: #0D788B;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 13px;
+}
+
+.seccionRecomendados > div > div > a:hover, .tituloProductos > a:hover, .seccionMasProductosRecomendados a:hover {
+  color: #C7511F;
+}
+
+.seccionProductos {
+  background-color: white;
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.24);
+}
+
+.tituloProductos {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.productos {
+  display: flex;
+  overflow-y: hidden;
+  overflow-x: auto;
+  white-space: nowrap;
+  scrollbar-width: none;
+  gap: 10px;
+}
+
+.productos::-webkit-scrollbar {
+  background: transparent;
+}
+
+.seccionMasProductosRecomendados {
+  margin: 20px;
+}
+
+.seccionMasProductosRecomendados > div > div > div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.seccionRecomendados img:hover, .seccionProductos img:hover, .seccionMasProductosRecomendados img:hover {
+  cursor: pointer;
+}
+
+.seccionMasProductosRecomendados p {
+  font-weight: 500;
+  font-size: 13px;
 }
 
 @media (min-width: 480px) {
-  .seccionRecomendados > div {
+  .seccionRecomendados > div, .seccionMasProductosRecomendados > div {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media only screen and (min-width: 600px) {
-  .seccionPublicidad > img {
-    transform: scale(1.2);
-  }
+@media only screen and (max-width: 600px) {
+
 }
 
 @media only screen and (min-width: 768px) {
-  .seccionPublicidad {
-    height: 25vh;
-  }
-  .seccionRecomendados > div {
+  .seccionRecomendados > div, .seccionMasProductosRecomendados > div {
     grid-template-columns: 1fr 1fr 1fr;
-  }
-  .seccionPublicidad > img {
-    transform: scale(1.1);
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .seccionPublicidad {
-    height: 30vh;
-  }
-  .seccionPublicidad > img {
-    transform: scale(1);
-  }
+
 }
 
 @media only screen and (min-width: 1200px) {
-  .seccionPublicidad {
-    height: 35vh;
-  }
-  .seccionRecomendados > div {
+  .seccionRecomendados > div, .seccionMasProductosRecomendados > div {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-  .seccionPublicidad > img {
-    transform: scale(1);
   }
 }
